--- a/django/static/base.css
+++ b/django/static/base.css
@@ -24,7 +24,7 @@ body {
     font-family: Sans-serif;
     padding: 5mm;
     color: #000;
-    padding-bottom: 1cm;
+    padding-bottom: 25mm;
     margin: 0;
 }
 
@@ -38,7 +38,7 @@ body, input, button {
     border-top: 1px solid #ccc;
     margin-left: 1cm;
     margin-right: 1cm;
-    padding-top: 15mm;
+    padding-top: 10mm;
 }
 
 #footer a {
@@ -158,4 +158,7 @@ input.negative {
     background-color: #f00;
     color: white;
     z-index: 1000;
+    left: 0;
+    right: 0;
+    padding: 8mm 15mm;
 }
