Generalize view to other 2-field challenges

--- a/django/stats/static/stats.css
+++ b/django/stats/static/stats.css
@@ -326,6 +326,19 @@ div.squad-members-appendix div.profile-card-appendix-row {
     background-color: rgba(255, 255, 255, 0.3);
 }
 
+div.squad .potw-header {
+    padding: 3mm;
+    font-size: 80%;
+    background-color: #eff;
+}
+
+div.squad .potw-header .potw-name {
+    font-weight: bold;
+}
+
+div.squad .potw-header .potw-description {
+}
+
 div.squad .potw-aspirants {
 }
 
