Add legend items for new badges

--- a/django/stats/templates/stats/squads.html
+++ b/django/stats/templates/stats/squads.html
@@ -60,15 +60,27 @@
                 </div>
 
                 <div class="legend-item">
-                    <div style="background-image: url('{% static 'badges' %}/surpass-yourself.png');" class="badge"></div>
-                    <div class="legend-item-label">Surpass-yourself-Performance</div>
-                    <div class="legend-item-description">Significantly outperform your own average performance in a match.</div>
+                    <div style="background-image: url('{% static 'badges' %}/carrier.png');" class="badge"></div>
+                    <div class="legend-item-label">Carrier Credential</div>
+                    <div class="legend-item-description">Achieve an ADR twice as high as anyone else on your team.</div>
                 </div>
 
                 <div class="legend-item">
                     <div style="background-image: url('{% static 'badges' %}/rising-star.png');" class="badge"></div>
                     <div class="legend-item-label">Rising Star</div>
                     <div class="legend-item-description">End a gaming session as the player with the best positive performance trend.</div>
+                </div>
+
+                <div class="legend-item">
+                    <div style="background-image: url('{% static 'badges' %}/surpass-yourself.png');" class="badge"></div>
+                    <div class="legend-item-label">Surpass-yourself-Performance</div>
+                    <div class="legend-item-description">Significantly outperform your own average performance in a match.</div>
+                </div>
+
+                <div class="legend-item">
+                    <div style="background-image: url('{% static 'badges' %}/peach.png');" class="badge"></div>
+                    <div class="legend-item-label">Peach Price</div>
+                    <div class="legend-item-description">Be the red lantern in your team, with a significant gap in ADR.</div>
                 </div>
 
         </div>
