Update legend items

--- a/django/stats/templates/stats/squads.html
+++ b/django/stats/templates/stats/squads.html
@@ -62,7 +62,7 @@
                 <div class="legend-item">
                     <div style="background-image: url('{% static 'badges' %}/carrier.png');" class="badge"></div>
                     <div class="legend-item-label">Carrier Credential</div>
-                    <div class="legend-item-description">Achieve an ADR twice as high as anyone else on your team.</div>
+                    <div class="legend-item-description">Achieve an ADR at least twice as high as everyone else on your team.</div>
                 </div>
 
                 <div class="legend-item">
@@ -80,7 +80,7 @@
                 <div class="legend-item">
                     <div style="background-image: url('{% static 'badges' %}/peach.png');" class="badge"></div>
                     <div class="legend-item-label">Peach Price</div>
-                    <div class="legend-item-description">Be the red lantern in your team, with a significant gap in ADR.</div>
+                    <div class="legend-item-description">Be the red lantern in your team, with a substantial deficit in ADR.</div>
                 </div>
 
         </div>
