--- a/django/stats/templates/stats/squads.html
+++ b/django/stats/templates/stats/squads.html
@@ -62,7 +62,7 @@
                 <div class="legend-item">
                     <div style="background-image: url('{% static 'badges' %}/carrier.png');" class="badge"></div>
                     <div class="legend-item-label">Carrier Credential</div>
-                    <div class="legend-item-description">Achieve an ADR at least twice as high as everyone else on your team.</div>
+                    <div class="legend-item-description">Achieve an ADR at least 1.8&times; as high as everyone else on your team.</div>
                 </div>
 
                 <div class="legend-item">
