Fix `convolve` in django/stats/templates/stats/player.html
(cherry picked from commit 987b110e02138f06ecb14855172b080dc98ecd84)

--- a/django/stats/templates/stats/player.html
+++ b/django/stats/templates/stats/player.html
@@ -47,7 +47,7 @@ function convolve( data, kernel )
             const k = i + j;
             if( k >= 0 && k < data.length )
             {
-                const kernelValue = kernel[ j + n ];
+                const kernelValue = kernel[ n - j ];
                 value += kernelValue * data[ k ];
                 weights += kernelValue;
             }
