Fix tests for `GamingSession.close`, add tests for rising star

--- a/django/stats/templates/stats/player.html
+++ b/django/stats/templates/stats/player.html
@@ -138,7 +138,7 @@ function updatePlot( sigma )
             x: [{{ period_start }}, {{ period_end }}],
             y: [{{ period_average }}, {{ period_average }}],
             mode: 'lines',
-            name: '30-days-average',
+            name: '30-days average',
             hoverinfo: 'skip',
             line: {
                 width: 2,
@@ -227,7 +227,7 @@ function updatePlot( sigma )
                     y1: 1,
                     yref: 'paper',
                     label: {
-                        text: '30-days-average',
+                        text: '30-days average',
                         textposition: 'top right',
                         font: {
                             size: 12,
