Enhance the consistency of the performance values (#38)
* Clean up code

* Clean up code

* Clean up code

* Fix `convolve` in django/stats/templates/stats/player.html

* Disable `UpdateTask.run` if not `settings.CSGO_API_ENABLED`

* Sketch some ideas

* Fix job name

* Fix test bug introduced in 27a115e91eed746e48450490ac85e3e686f316c7

(cherry picked from commit 300701189d990140b34cd2b0848d3714e069ca4a)

* Implement `SquadMembership.update_stats`

* Work in progress

* Fix linting in django/stats/radarplot.py

* Clean up and fix linting in django/discordbot/bot.py

* Refactor django/stats/plots.py

* Remove db.sqlite3.backup

* Fix bugs, add migration

* Increase legend icon size

* Remove dangling semicolons

* Fix player value scale by factor of 100

* Add 30-days-average to plot on player page

* Fix tests/bugs

* Fix tests for `GamingSession.close`, add tests for rising star

* Remove `MatchParticipation.Period`

* Rename `Squad.update_positions` to `Squad.update_stats`

* Improve presentation of the 30-days average on the player page

* Fix bugs

* Show trend numbers on squad page

* Call `Squad.update_stats` from `stats.views.player`

--- a/django/stats/static/stats.css
+++ b/django/stats/static/stats.css
@@ -175,6 +175,20 @@ div.profile-card .profile-stat-bar-trend-down {
     left: 1mm;
 }
 
+div.profile-card .profile-stat-bar-trend-label {
+    font-size: 70%;
+    vertical-align: middle;
+    position: absolute;
+}
+
+div.profile-card .profile-stat-bar-trend-up .profile-stat-bar-trend-label {
+    right: 5mm;
+}
+
+div.profile-card .profile-stat-bar-trend-down .profile-stat-bar-trend-label {
+    left: 5mm;
+}
+
 div.profile-card .profile-hint-container {
     position: relative;
     white-space: normal;
@@ -253,9 +267,9 @@ div.squad-members-appendix .legend-item .badge {
     left: 0;
     top: 0;
     border-right: 1px solid #ccc;
-    padding-right: 1mm;
+    padding-right: 2mm;
     height: 100%;
-    background-size: 83%;
+    background-size: 85%;
     background-repeat: no-repeat;
     filter: drop-shadow(0 0 1mm rgba(0,0,0,0.1));
 }
@@ -265,15 +279,15 @@ div.squad-members-appendix .legend-item .legend-item-label {
     vertical-align: middle;
     font-size: 100%;
     position: absolute;
-    left: 9mm;
+    left: 10mm;
     white-space: nowrap;
 }
 
 div.squad-members-appendix .legend-item .legend-item-description {
     display: block;
-    font-size: 80%;
+    font-size: 77%;
     position: absolute;
-    left: 9mm;
+    left: 10mm;
     top: 1.8em;
 }
 
